Fixes spacing issue on easierBanner

--- a/src/styles/why-blogwise.module.sass
+++ b/src/styles/why-blogwise.module.sass
@@ -33,11 +33,13 @@
   text-align: center
   font-weight: bold
   margin-bottom: 12px
+  width: 90%
 
 .easierBanner__body
   text-align: center
   font-size: 14px
-  width: 30%
+  width: 80%
+  max-width: 575px
 
 ///////////////////////
 // Companies Section //
